# protoMUSIC

./: .env.example  .gitignore  .gitmodules  CMakeLists.txt  README.md  USBHubPlan.md  ambyteiot_ambit_demo.ipynb  partitions.csv  plan-ambyteIotLudo.prompt.md  platformio.ini  pyproject.toml  sched_lua_embed.h  sdkconfig.adafruit_feather_esp32s3  sdkconfig.defaults  sdkconfig.esp32-s3-devkitm-1  temp_inipreview.txt
.github/: copilot-instructions.md
ambitPIO/: REFACTOR_PLAN.md  platformio.ini
ambitPIO/src/: .gitignore  PAM.cpp  PAM.h  ambit-1.ino  config.h  data_utils.cpp  data_utils.h  do_c.cpp  do_command.h  nvs1.cpp  nvs1.h  run_esp.cpp  self_test.cpp  serial.cpp  serial.h  upload.bat  uploader.py
ambitPIO/src/src/: devices_init.cpp  devices_init.h  pin_config.h
ambitPIO/src/src/adpd/: u_adpd6100.cpp  (+3 more)
components/CLI/: CLI.c  CMakeLists.txt
components/CLI/include/: CLI.h
components/I2C_device/: CMakeLists.txt  I2C_device.cpp
components/I2C_device/include/: I2C_device.h
components/ambit_ota/: CMakeLists.txt  ambit_ota.c
components/ambit_ota/include/: ambit_ota.h
components/ambyte_status/: CMakeLists.txt  ambyte_status.c
components/ambyte_status/include/: ambyte_status.h
components/bme280/: BME280.cpp  CMakeLists.txt  bme280_adafruit_private.hpp  bme280_arduino_shim.cpp  bme280_driver.cpp
components/bme280/include/: bme280.h
components/certs/: CMakeLists.txt  certs.c
components/certs/include/: certs.h
components/command_router/: CMakeLists.txt  command_router.c
components/command_router/include/: command_router.h
components/device_commands/: CMakeLists.txt  device_commands.c
components/device_commands/include/: ambit_protocol.h  device_commands.h
components/device_config/: CMakeLists.txt  device_config.c
components/device_config/include/: device_config.h
components/domain/: CMakeLists.txt
components/domain/include/: device_status_port.h  messaging_port.h  persistence_port.h  sensing_port.h  uart_sensor_port.h
components/event_log/: CMakeLists.txt  event_log.c
components/event_log/include/: event_log.h
components/hal/i2c_bus/: i2c_bus.c
components/lua/: CMakeLists.txt
components/lua_runner/: CMakeLists.txt  lua_runner.c  lua_script_blob.c  sched.lua  test_lua_script.lua
components/lua_runner/include/: lua_runner.h
components/mp2731/: CMakeLists.txt  mp2731.c
components/mp2731/include/: mp2731.h
components/mqtt_client/: CMakeLists.txt  Kconfig.projbuild  mqtt_client.c
components/mqtt_client/include/: ambyte_mqtt_client.h
components/ota_spike/: CMakeLists.txt  ota_spike.c
components/ota_update/: CMakeLists.txt  ota_update.c
components/pcf2131tfy_rtc/: CMakeLists.txt  PCF2131_I2C.cpp  PCF2131_base.cpp  RTC_NXP.cpp  RTC_NXP.h  pcf2131tfy_rtc_api.cpp
components/persistence/: CMakeLists.txt  pending_store.c  sqlite_persistence.c
components/sd_card/: CMakeLists.txt  sd_card.c  sd_card.h
components/sd_logger/: CMakeLists.txt  sd_logger.c  sd_logger.h
components/spike_log/: CMakeLists.txt  spike_log.c
components/sqlite3/: esp32.c
components/sync_runner/: CMakeLists.txt  sync_runner.c
components/time_sync/: CMakeLists.txt  time_sync.c
components/uart_sensors/: CMakeLists.txt  uart_sensors.c
components/wifi_manager/: CMakeLists.txt  wifi_manager.c
docs/: MQTT TLS test client.py  _prov_env.py  ambit-ota-hwtest.md  ambyte_prov.py  ble-provisioning.txt  crashtest-main.lua  exampleMain.lua  hardware-test.txt  main.lua.example  measurement-flow-plan.md  mqtt-payload.md  mqtt_tls_test_client.py  ota-update-plan.md  overall_architecture.txt  payload-v2-plan.md  phase6-hardware-test.txt  phase6-plan.txt  stage2_command_test.py  sync.lua
main/: CMakeLists.txt  Kconfig.projbuild  app_main.c
planning/: ai-prompts.txt
test/: read_export.ipynb
tools/: _prov_env.py  build_nvs_image.py  extra_script.py  set_rtc_on_upload.py
(+27 files in other folders)
