[project]
name = "ambyte-iot-ludo"
version = "0.1.0"
description = "Ambyte IoT firmware (ESP32-S3) + BLE provisioning helper"
authors = [
    { name = "dominikvrbic", email = "dominik.vrbic@jii.org" }
]
requires-python = ">=3.13"
dependencies = [
    "bleak>=3.0.1",
    "cryptography>=46.0.7",
    "protobuf>=7.34.1",
]
